@@ -1,19 +1,14 @@
 package usuarios.Contrasenia;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
-
-interface StringABool { //para la lista de funciones
-  boolean apply(String x);
-}
 
 public class ValidadorDeContrasenia {
 
-  private static List<StringABool> condiciones = Stream.<StringABool>of(
-          (String contrasenia) -> DiezMilPeoresContrasenias.estaEnLaLista(contrasenia),
+  private static final List<StringABool> condiciones = Stream.<StringABool>of(
+          (String contrasenia) -> !DiezMilPeoresContrasenias.estaEnLaLista(contrasenia),
           (String contrasenia) -> contrasenia.length() >= 8,
           (String contrasenia) -> contrasenia.length() < 64
-  ).collect(Collectors.toList());
+  ).toList();
 
 
 
